--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,6 +10,12 @@ find_package(ament_cmake REQUIRED)
 # uncomment the following section in order to fill in
 # further dependencies manually.
 # find_package(<dependency> REQUIRED)
+find_package(rclcpp REQUIRED)
+find_package(nav_msgs REQUIRED)
+find_package(ackermann_msgs REQUIRED)
+
+add_executable(estimator_node src/nodes/estimator_node.cpp)
+ament_target_dependencies(estimator_node rclcpp nav_msgs ackermann_msgs)
 
 if(BUILD_TESTING)
   find_package(ament_lint_auto REQUIRED)
