--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -12,7 +12,10 @@ find_package(ament_cmake REQUIRED)
 # find_package(<dependency> REQUIRED)
 find_package(rclcpp REQUIRED)
 find_package(nav_msgs REQUIRED)
+find_package(geometry_msgs REQUIRED)
 find_package(ackermann_msgs REQUIRED)
+
+include_directories(include)
 
 add_executable(estimator_node src/nodes/estimator_node.cpp)
 ament_target_dependencies(estimator_node rclcpp nav_msgs ackermann_msgs)
