--- a/package.xml
+++ b/package.xml
@@ -13,6 +13,7 @@
   <test_depend>ament_lint_common</test_depend>
 
   <depend>ackermann_msgs</depend>
+  <depend>geometry_msgs</depend>
   <depend>nav_msgs</depend>
 
   <export>
